Code cleanup - symbols